--- a/app/static/frontend/src/app/app.component.html
+++ b/app/static/frontend/src/app/app.component.html
@@ -131,14 +131,22 @@
               <div class="card-body" >
 
                 <div class="form-group">
-                  <label for="input-dataProviders-1-file">First Dataprovider</label>
+                  <label for="input-dataProviders-1">First Dataprovider</label>
+                  <select class="form-control" id="input-dataProviders-1" name="dataProviders-1"
+                      [(ngModel)]="selectedDataProviders1">
+                      <option *ngFor="let dataProvider of dataProviders">{{dataProvider.name}}</option>
+                  </select>
                   <label for="input-dataProviders-1-file"></label>
                   <input (change)="onFileChangeDataProvider1($event)" type="file" class="form-control-file" id="input-dataProviders-1-file"
                       name="input-dataProviders-1-file" aria-describedby="dataProvider1File">
                   <small id="dataProvider1File" class="form-text text-muted">Use this file upload to provide your own dataprovider.</small>
               </div>
               <div class="form-group">
-                  <label for="input-dataProviders-2-file">Second Dataprovider</label>
+                  <label for="input-dataProviders-2">Second Dataprovider</label>
+                  <select class="form-control" id="input-dataProviders-2" name="dataProviders-2"
+                      [(ngModel)]="selectedDataProviders2">
+                      <option *ngFor="let dataProvider of dataProviders">{{dataProvider.name}}</option>
+                  </select>
                 <label for="input-dataProviders-2-file"></label>
                 <input (change)="onFileChangeDataProvider2($event)" type="file" class="form-control-file" id="input-dataProviders-2-file"
                       name="input-dataProviders-2-file" aria-describedby="dataProvider2File">
