--- a/app/static/frontend/src/app/app.component.html
+++ b/app/static/frontend/src/app/app.component.html
@@ -157,6 +157,29 @@
             </div>
         </div>
 
+        <!-- Scenarios -->
+        <div class="card">
+            <div class="card-header">
+              <h5 class="mb-0 btn btn-link" (click)="toggleAccordion('Scenarios-container')">
+                Scenarios (default Scenario 0)
+              </h5>
+            </div>
+            <div id="Scenarios-container" class="collapse show" style="display:none">
+              <div class="card-body" >
+                <div class="form-group">
+                  <div class="">
+                    <p>Choose the preferred scenario for calculation of the temperature scores.</p>
+                    <div *ngFor="let scenario of availableScenarios" class="form-check" id="{{scenario.label}}">
+                      <input (click)="addScenario($event)" class="form-check-input" type="radio" name="gridRadios" value="{{scenario.label}}">
+                      <label class="form-check-label" for="{{scenario.label}}">
+                        {{ scenario.description }}
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
 
         <!-- Columns -->
         <div class="card">
@@ -191,29 +214,6 @@
                     <select class="form-control" id="grouping" name="grouping" [(ngModel)]="groupingColumns" multiple>
                         <option *ngFor="let column of availableGroupingColumns">{{column}}</option>
                     </select>
-                </div>
-              </div>
-            </div>
-        </div>
-
-        <!-- Scenarios -->
-        <div class="card">
-            <div class="card-header">
-              <h5 class="mb-0 btn btn-link" (click)="toggleAccordion('Scenarios-container')">
-                Scenarios
-              </h5>
-            </div>
-            <div id="Scenarios-container" class="collapse show" style="display:none">
-              <div class="card-body" >
-                <div class="form-group">
-                  <div class="">
-                    <div *ngFor="let scenario of availableScenarios" class="form-check" id="{{scenario.label}}">
-                      <input (click)="addScenario($event)" class="form-check-input" type="radio" name="gridRadios" value="{{scenario.label}}">
-                      <label class="form-check-label" for="{{scenario.label}}">
-                        {{ scenario.description }}
-                      </label>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
