update some texts and remove unused values in configs

--- a/app/static/frontend/src/app/app.component.html
+++ b/app/static/frontend/src/app/app.component.html
@@ -192,7 +192,7 @@
         <div class="card">
             <div class="card-header">
               <h5 class="mb-0 btn btn-link" (click)="toggleAccordion('Scenarios-container')">
-                Scenarios (default Scenario 0)
+                Scenarios (default: With current targets, rest of portfolio business as usual)
               </h5>
             </div>
             <div id="Scenarios-container" class="collapse show" style="display:none">
