--- a/app/static/frontend/src/app/app.component.html
+++ b/app/static/frontend/src/app/app.component.html
@@ -81,7 +81,7 @@
           <button class="btn btn-primary">Upload Dataprovider</button>
         </div>
         <div *ngIf="uploadSuccess" class="alert alert-success" style="display:inline-block;" role="alert">
-           Upload succeeded
+           Upload {{uploadCount}} succeeded
         </div>
 
 
